@@ -1,3 +1,8 @@
+2007-07-11  Mark Ellis <mark@mpellis.org.uk>
+
+	* added notification for device (dis)connect
+	* src/Makefile.am - tidy up
+
 2007-07-10  Mark Ellis <mark@mpellis.org.uk>
 
 	* made SynceTrayIcon as subclass of EggTrayIcon
